test(auth): align auth userContext assertions